fix: Sub-title line spacing

--- a/public/css/stride.css
+++ b/public/css/stride.css
@@ -1073,13 +1073,12 @@ fieldset[disabled] .btn-warning.active {
 .main .motto,
 .main .subscribe .info-text,
 .image {
-  font-size: 5vw;
+  font-size: 2.8vw;
   font-family: 'Infini Regular';
-  font-style: italic;
   color: #f8f8f8;
   text-shadow: 0 1px 4px rgba(0, 0, 0, 0.33);
   text-align: center;
-  margin-top: 30px;
+  letter-spacing: 6px;
 }
 .main .subscribe .info-text {
   font-size: 18px;
@@ -1167,6 +1166,10 @@ fieldset[disabled] .btn-warning.active {
   .buttons {
     margin-top: 2rem;
     margin-bottom: 1rem;
+  }
+
+  .main .motto {
+    letter-spacing: 10px;
   }
 }
 @media (min-width: 991px) {
